[tool.poetry]
name = "upnp-finder"
version = "0.1.3"
description = "Uses tornado and SSDP to discover UPNP devices on the network"
authors = ["Tyler Nullmeier <tylerzeromaster@gmail.com>"]
packages = [
    { include = "upnp_finder" },
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
upnp_finder = "upnp_finder.cli:cli"