[tool.poetry]
name = "upnp-finder"
version = "1.0.1"
description = "Uses asyncio and SSDP to discover UPNP devices on the network"
authors = ["Tyler Nullmeier <tylerzeromaster@gmail.com>"]
packages = [
    { include = "upnp_finder" },
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
defusedxml = "^0.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
upnp_finder = "upnp_finder.cli:cli"
